--- a/w1125/w01/board/templates/bview.html
+++ b/w1125/w01/board/templates/bview.html
@@ -45,7 +45,7 @@
       <tr>
         <td colspan="3" class="article">
           {% if board.bfile %}
-          <img src="{{border.bfile.url}}" style="width:600px;">
+          <img src="{{board.bfile.url}}" style="width:600px;">
           {% else %}
           이미지 파일없음
           {% endif %}
